[gd_scene load_steps=34 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/sprites/idle/player_idle_0.png" type="Texture" id=3]
[ext_resource path="res://characters/player/sprites/idle/player_idle_1.png" type="Texture" id=4]
[ext_resource path="res://characters/player/sprites/idle/player_idle_2.png" type="Texture" id=5]
[ext_resource path="res://characters/player/sprites/idle/player_idle_3.png" type="Texture" id=6]
[ext_resource path="res://characters/player/sprites/attack/player_attack_0.png" type="Texture" id=7]
[ext_resource path="res://characters/player/sprites/attack/player_attack_1.png" type="Texture" id=8]
[ext_resource path="res://characters/player/sprites/attack/player_attack_2.png" type="Texture" id=9]
[ext_resource path="res://characters/player/sprites/attack/player_attack_3.png" type="Texture" id=10]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_0.png" type="Texture" id=11]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_1.png" type="Texture" id=12]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_2.png" type="Texture" id=13]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_3.png" type="Texture" id=14]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_4.png" type="Texture" id=15]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_5.png" type="Texture" id=16]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_6.png" type="Texture" id=17]
[ext_resource path="res://characters/player/sprites/spawn/player_spawn_7.png" type="Texture" id=18]
[ext_resource path="res://characters/player/sprites/move/player_move_0.png" type="Texture" id=19]
[ext_resource path="res://characters/player/sprites/move/player_move_1.png" type="Texture" id=20]
[ext_resource path="res://characters/player/sprites/move/player_move_2.png" type="Texture" id=21]
[ext_resource path="res://characters/player/sprites/move/player_move_3.png" type="Texture" id=22]
[ext_resource path="res://characters/player/sprites/death/player_death_0.png" type="Texture" id=23]
[ext_resource path="res://characters/player/sprites/death/player_death_1.png" type="Texture" id=24]
[ext_resource path="res://characters/player/sprites/death/player_death_2.png" type="Texture" id=25]
[ext_resource path="res://characters/player/sprites/death/player_death_3.png" type="Texture" id=26]
[ext_resource path="res://characters/player/sprites/death/player_death_4.png" type="Texture" id=27]
[ext_resource path="res://characters/player/sprites/death/player_death_5.png" type="Texture" id=28]
[ext_resource path="res://characters/player/sprites/death/player_death_6.png" type="Texture" id=29]
[ext_resource path="res://characters/player/sprites/death/player_death_7.png" type="Texture" id=30]
[ext_resource path="res://sound/sound_fx/hit.wav" type="AudioStream" id=31]
[ext_resource path="res://sound/sound_fx/die.wav" type="AudioStream" id=32]



[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "spawn",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "death",
"speed": 8.0
} ]

[node name="Player" index="0" instance=ExtResource( 1 )]

collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
base_speed = 120
max_health = 150
knockback_percent = 6
damage = 25
attack_cooldown = 0.4
hit_duration = 1.44
dash_speed = 400
max_energy = 100
dash_cost = 25
energy_regen = 5
dash_duration = 0.5
energy_regen_delay = 0.666

[node name="Sprite" parent="." index="0"]

frames = SubResource( 1 )
frame = 0

[node name="Collider" parent="." index="1"]

visible = false

[node name="Weapon" parent="." index="2"]

editor/display_folded = true

[node name="AttackContainer" parent="Weapon" index="0"]

position = Vector2( 23, 0 )
rotation = 0.0

[node name="ActionSound" parent="." index="5"]

volume_db = -23.0
pitch_scale = 2.0
area_mask = 2

[node name="HitSound" parent="." index="6"]

stream = ExtResource( 31 )
volume_db = -14.0
area_mask = 2

[node name="DeathSound" parent="." index="7"]

stream = ExtResource( 32 )
volume_db = -15.0
area_mask = 2

[node name="SpawnSound" parent="." index="8"]

volume_db = -25.0
area_mask = 2

[node name="Camera" type="Camera2D" parent="." index="9"]

light_mask = 16
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.3
drag_margin_top = 0.25
drag_margin_right = 0.3
drag_margin_bottom = 0.25
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Visibility" ]

[node name="DashTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="RegenTimer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]


